  - New System Config interface;
  - Mac OS X support;
  - Icon and Prefix sorting (name, date);
  - Version string to About page;
  - Handler for wrong URL in wine app db;
  - Add Logging subsystem activation\deactivation button to Logging tab toolbar;
  - Add taskmgr, winemine, iexplorer, control, oleview icons to prefix's system folder;
  - New system icons from latest wine version;

  Fixed:
  - Create ~/.local/share/wineprefixes directory if it does not exists;
  - Error is Desktop paths are empty;
  - Desktop Paths are wrongly labeled [3491775];
  - Win32 prefix creation while prefix directory exists;
  - Unite Icon\Detail toolbar actions;
  - No translations autoupdate at project build. Use `make translations` insted;
  - Fixed process refresh loop;
  - Extended env command after console terminal;
  - Updated README file: added "Known Issues" section;
  - Set WINEDEBUG to '-all' if logging subsystem disabled and program was
  executed not in console session;
  - Icon export dialog empty icons [3358599];
  - Dropped obsolete strings from translation files [3358602];

Version 0.121
 Added:
  - updated winetricks plugin;
  - option to make Prefix view unexpanded at startup;
  - Polish translation by Frank (nobange);
  - interoperability of wineprefixes between q4wine, wibom, vineyard, and
  winetricks (and maybe playonlinux) http://wiki.winehq.org/BottleSpec;
  - German translation by Ron;
  - experimental build support for Mac OS X;
  - extended virtual desktop resolution list [3150062];
  - request for language locale support [3144001 and 3149056];
  - Hebrew translation by Yaron Shahrabani;
  - Prefix alphabetic sort;

 Fixed:
  - build on FreeBSD;
  - removed embedded fuseiso support (q4wine-mount);

Version 0.120-r1
 Added:
  - q4wine now will create new symlinks when mounting $WINEPREFIX/dosdevices/${DRIVE}:
    pointing to the mount point and $WINEPREFIX/dosdevices/${DRIVE}:: pointing to
    the Image file;