@@ -128,7 +128,7 @@ ELSE( ${CMAKE_SYSTEM_NAME} MATCHES Darwin )
         SET( DESKTOP_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/share/applications )
     ENDIF( NOT DESKTOP_ENTRY_PATH )
     IF( NOT PIXMAPS_ENTRY_PATH )
-        SET( PIXMAPS_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
+        SET( PIXMAPS_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor )
     ENDIF( NOT PIXMAPS_ENTRY_PATH )
     IF( NOT MANPAGE_ENTRY_PATH )
         SET( MANPAGE_ENTRY_PATH ${CMAKE_INSTALL_PREFIX}/share/man )
